--- a/theme/css/general.css
+++ b/theme/css/general.css
@@ -8,7 +8,7 @@
 }
 
 html {
-    font-family: "Open Sans", sans-serif;
+    font-family: -apple-system,BlinkMacSystemFont,Helvetica Neue,PingFang SC,Microsoft YaHei,Source Han Sans SC,Noto Sans CJK SC,WenQuanYi Micro Hei,sans-serif;
     color: var(--fg);
     background-color: var(--bg);
     text-size-adjust: none;
