index by default

--- a/theme/chapter.hbs
+++ b/theme/chapter.hbs
@@ -5,7 +5,7 @@
 {{else}}
     <li class="chapter-item expanded">
         <a href="{{{ href }}}">
-            <strong aria-hidden="true">{{{ index }}}. </strong> {{{ title }}}
+            <strong aria-hidden="true">{{{ index }}} </strong> {{{ title }}}
         </a>
     </li>
     {{#if children}}
