--- a/theme/section.hbs
+++ b/theme/section.hbs
@@ -1,7 +1,7 @@
 <li class="chapter-item expanded">
     <a href="{{{ href }}}">
         <strong aria-hidden="true">
-            {{{ index }}}.
+            {{{ index }}}
         </strong>
         {{{ title }}}
     </a>
