--- a/theme/image.hbs
+++ b/theme/image.hbs
@@ -6,7 +6,7 @@
         alt="{{alt}}">
     {{#if caption}}
         <figcaption>
-            <strong>Figure {{index}}: </strong>
+            <strong>{{index}}: </strong>
             {{caption}}
         </figcaption>
 </figure>
