--- a/theme/print.hbs
+++ b/theme/print.hbs
@@ -40,6 +40,7 @@
         <!-- MathJax -->
         <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
         {{/if}}
+        <script src="./paged.polyfill.js"></script>
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -94,7 +95,9 @@
                 
                 <div id="content" class="content">
                     <main>
-                        {{{ toc }}}
+                        <ul class="toc">
+                            {{{ toc }}}
+                        </ul>
                         {{{ content }}}
                     </main>
 
