page number start from first chapter

--- a/theme/sidebar-chapter.hbs
+++ b/theme/sidebar-chapter.hbs
@@ -4,7 +4,7 @@
 </ol>
 {{else}}
     <li class="chapter-item expanded">
-        <a href="{{{ href }}}">
+        <a href="{{{ href }}}" class="{{#if beforeFirstChapter}}before-first-chapter{{/if}}">
             <strong aria-hidden="true">{{{ index }}} </strong> {{{ title }}}
         </a>
     </li>
