--- a/theme/css/print.css
+++ b/theme/css/print.css
@@ -99,6 +99,9 @@ a {
 .toc li {
     list-style: none;
 }
+.chapter-first-chapter {
+    counter-reset: page 1;
+}
 
 
 .chapter-title {  
@@ -116,11 +119,6 @@ a {
 }
 }
 
-.toc a::after {
-    content: leader('.') target-counter(attr(href), page);
-}
-
-
 .toc a {
     background-color: white;
     padding-right: 10px;
@@ -134,6 +132,10 @@ a {
     display: inline-block;
     padding-left: 5px;
     padding-right: 5px;
+}
+
+.toc a.before-first-chapter::after {
+    content: target-counter(attr(href url), page, upper-roman);
 }
 
 .toc {
