--- a/theme/sidebar-section.hbs
+++ b/theme/sidebar-section.hbs
@@ -1,5 +1,5 @@
 <li class="chapter-item expanded">
-    <a href="{{{ href }}}">
+    <a href="{{{ href }}}" class="{{#if beforeFirstChapter}}before-first-chapter{{/if}}">
         <strong aria-hidden="true">
             {{{ index }}}
         </strong>
